--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.component {
+  border: 2px solid white;
+  background-color: lightgrey;
+  margin: 4px;
+  padding: 4px;
+ }
+ 
+ .burger {
+  display: flex;
+  justify-content: center;
+ }
